<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="version">26001</string>
    <string name="storeversion_url">https://play.google.com/store/apps/details?id=</string>
    <string name="app_name">eCongress</string>
    <string name="app_desc">Connect directly to your Elected Officials in Congress using eCongress!</string>
    <string name="lastname">Last Name</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="title">Mr/Mrs/Ms</string>
    <string name="econgress">eCongress</string>
    <string name="mi">MI</string>
    <string name="firstname">First Name</string>
    <string name="state">* State</string>
    <string name="zip">* Zip</string>
    <string name="zip4">* +4</string>
    <string name="telephone">Telephone</string>
    <string name="city">* City</string>
    <string name="testemail">Test Email</string>
    <string name="settings">Settings</string>
    <string name="address">* Address</string>
    <string name="preference_file_key">com.mycompany.app.PREFERENCE_FILE_KEY</string>
    <string name="presidentemail">president@whitehouse.gov</string>
    <string name="presidentwebsite">https://www.whitehouse.gov</string>
    <string name="presidentphone">202\-456\-1111</string>
    <string name="presidentsymbol">POTUS</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="permissions_not_set">Account: Permissions Not Set</string>
    <string name="test_mode">eCongress Test Mode</string>
    <string name="normal_mode">eCongress</string>
    <string name="no_email_account">Warning: No Email Account!</string>
    <string name="no_token">Warning: Oauth Token Not Valid!</string>
    <string name="sending_message">Sending message&#8230;</string>
    <string name="no_email_address">Add at least one recipient&#8230;</string>
    <string name="one_recipient">You Must Add At Least One Recipient!</string>
    <string name="email_address_not_available">"Email Address Not Available: "</string>
    <string name="no_subject_or_message">Subject Or Message Not Entered!</string>
    <string name="no_network">Warning: No Network Service!</string>
    <string name="no_legislative_service">Warning: Legislative Service Not Accessible!</string>
    <string name="invalid_zip">Warning: Invalid Zip Code Provided!</string>
    <string name="no_phone">"Phone Not Available: "</string>
    <string name="no_website">"Website Not Available: "</string>
    <string name="telphone_parse">tel:</string>
    <string name="email_failed">"Mail Send Failed: "</string>
    <string name="zip_not_entered">Warning: Zip Code Must Be Entered to Continue!</string>
    <string name="zip_length">Warning: Zip Code Not Correct Length!</string>
    <string name="zip_numeric">Warning: Zip Code Must Be Numeric!</string>
    <string name="zip_4_length">Warning: Zip+4 Not Correct Length!</string>
    <string name="zip_4_numeric">Warning: Zip+4 Must Be Numeric!</string>
    <string name="refreshing">Refreshing&#8230;</string>
    <string name="url">url</string>
    <string name="command">command</string>
    <string name="key">key</string>
    <string name="representative">Representative</string>
    <string name="clear_message">Clear Message</string>
    <string name="legislative_parse_error">Warning: Legislative Service Parse Error</string>
    <string name="no_subject">No Subject Entered</string>
    <string name="no_message">No Message Text Entered</string>
    <string name="oauth_url">https://www.googleapis.com/oauth2/v1/tokeninfo?access_token=</string>
    <string name="oauth_network_error">Warning: Oauth Network Error</string>
    <string name="oauth_parse_error">Warning: Oauth Token Parse Error</string>
    <string name="oauth_token_not_acquired">Warning: Oauth Access Not Yet Acquired</string>
    <string name="account">Account:</string>
    <string name="street_not_entered">Warning: Street Address Must be Entered to Continue!</string>
    <string name="city_not_entered">Warning: City Must be Entered to Continue!</string>
    <string name="state_not_entered">Warning: State Must be Entered to Continue!</string>
    <string name="no_zip4_entered">Warning: Zip+4 Must be Entered to Continue!</string>
</resources>
